--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,8 @@
   --font-new-tegomin: var(--font-new-tegomin);
   --font-shippori-mincho: var(--font-shippori-mincho);
   --font-noto-serif-jp: var(--font-noto-serif-jp);
+  --font-zen-old-mincho: var(--font-zen-old-mincho);
+  --font-sawarabi-mincho: var(--font-sawarabi-mincho);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
